Minor tweaks to scaffold

--- a/doc/ssh-talk.tex
+++ b/doc/ssh-talk.tex
@@ -20,9 +20,9 @@
 
 % -----------------------------------------------------------------------------------------
 
-\title{SmartSerif Beamer Theme}
-\author{Stephen Wattam}
-% \institute[2013]{Lancaster University}
+\title{SSH Scan Case Study}
+\author{Stephen Wattam \& Rob Larson}
+\institute[2013]{Lancaster University}
 \date{\tiny \today}
 
 \begin{document}
@@ -36,67 +36,36 @@
 \section{Overview}
 \subsection{About}
 \frame{\frametitle{About}
-\begin{itemize}
-    \item Based on the style by Cameron Bracken
-    \item Serif
-    \item Nicer looking than most Beamer Themes
-    \item Has a fancy background
-\end{itemize}    
+What happened?
+When?
+How did we know?
 }
 
 
-
-\frame{\frametitle{Requirements}
-\begin{itemize}
-    \item Requires:
-    \begin{itemize}
-        \item \texttt{ifdraft}
-        \item \texttt{tikz} (optional, used for background only)
-        \item \texttt{palatino}
-    \end{itemize}
-\end{itemize}
-}
 
 \section{Usage}
 \frame{\frametitle{Usage}
-Use the style like any other beamer theme.  Simply place it in a TeX path and use:
-
-    \vspace{10pt}
-\texttt{usetheme[option,option2=value]{SmartSerif}}
-    \vspace{10pt}
-
-Options are listed in subsequent pages of this manual.
 }
 
 \subsection{Options}
 \frame{\frametitle{Colour Options}
-\begin{itemize}
-    \item \textbf{\texttt{bannerbg=colour}} --- Set the banner background 
-    \item \textbf{\texttt{bannerfg=colour}} --- Set the banner foreground
-    \item \textbf{\texttt{bannerline=colour}} --- Set the colour of the line at the bottom of the banner
-    \item \textbf{\texttt{curvecolour=colour}} --- Set the colour of the Koch curve in the background
-    \item \textbf{\texttt{infolabcolours}} --- Uses infolab colour schemes, and turns off the curve (use \texttt{forcecurve} to turn it back on again)
-    % \item \textbf{\texttt{}} --- STUFF
-\end{itemize}
 }
 
 
-\frame{\frametitle{Display Options}
-\begin{itemize}
-    \item \textbf{\texttt{nocurve}} --- Disable the background curve
-    \item \textbf{\texttt{forcecurve}} --- Turn the curve on when disabled by the \texttt{infolabcolours} option
-    \item \textbf{\texttt{num}} --- Show slide numbers in the footer
-\end{itemize}
-}
 
-
-\section{Download}
+\section{Conclusions}
 \frame{\frametitle{Download}
     \begin{center}
-        \item \url{http://stephenwattam.com/projects/smartserif/}
+        \item Fin.
     \end{center}
 }
 
+\section{Resources / References}
+\frame{\frametitle{Download}
+    \begin{center}
+        \item Fin.
+    \end{center}
+}
 
 % -----------------------------------------------------------------------------------------
 \end{document}
