Added more detail to narrative

--- a/doc/ssh-talk.tex
+++ b/doc/ssh-talk.tex
@@ -33,35 +33,126 @@
 \frame{\tableofcontents}
 
 % -----------------------------------------------------------------------------------------
-\section{Overview}
-\subsection{About}
+% -----------------------------------------------------------------------
+% Background
+% -----------------------------------------------------------------------
+\section{Background}
+\subsection{Setup}
 \frame{\frametitle{About}
-What happened?
-When?
-How did we know?
+\begin{itemize}
+    \item Compromised machine was a controller for a test cluster
+    \item Notified of breach on 24th November
+
+        % 'what do we do now'
+
+
+\end{itemize}
+}
+
+
+\subsection{Technical}
+\frame{\frametitle{The Network}
+\begin{itemize}
+    
+    \item Small network with manager and slave nodes
+    
+        % Topology picture
+
+\end{itemize}
 }
 
 
 
-\section{Usage}
-\frame{\frametitle{Usage}
+
+\frame{\frametitle{Machine \& OS}
+\begin{itemize}
+    
+    \item Ubuntu MAAS
+        % mention this is why people have ubuntu VMs
+    \item Two NICs, one on university network
+        % forward and backward facing (LAN, WAN)
+    \item Machine is old commodity machine
+        %
+
+\end{itemize}
 }
 
-\subsection{Options}
-\frame{\frametitle{Colour Options}
+
+
+
+% -----------------------------------------------------------------------
+% Log analysis
+% -----------------------------------------------------------------------
+
+\section{Logs}
+\subsection{Logs}
+\frame{\frametitle{Bash}
+\begin{center}
+    \item Fin.
+\end{center}
+}
+
+\subsection{Logs}
+\frame{\frametitle{Syslog}
+\begin{center}
+    \item Fin.
+\end{center}
+}
+
+
+\subsection{Logs}
+\frame{\frametitle{Other Files}
+% Any files edited after 23rd
+\begin{center}
+    \item Fin.
+\end{center}
 }
 
 
 
-\section{Conclusions}
-\frame{\frametitle{Download}
+
+% -----------------------------------------------------------------------
+% SSH scan analysis
+% -----------------------------------------------------------------------
+\section{Software 1}
+\subsection{SSH Scanner}
+\frame{\frametitle{SSH Scanner}
+\begin{center}
+    \item Fin.
+\end{center}
+}
+
+
+\frame{\frametitle{SSH Scanner}
+\begin{center}
+    \item Fin.
+\end{center}
+}
+
+
+% -----------------------------------------------------------------------
+% RDP scan analysis
+% -----------------------------------------------------------------------
+\section{Software 2}
+\subsection{RDP Scanner}
+\frame{\frametitle{RDP Scanner}
     \begin{center}
         \item Fin.
     \end{center}
 }
 
-\section{Resources / References}
-\frame{\frametitle{Download}
+
+% -----------------------------------------------------------------------
+% Our findings from report/summary 
+% -----------------------------------------------------------------------
+\section{Our Findings}
+\frame{\frametitle{Summary}
+\begin{center}
+    \item Fin.
+\end{center}
+}
+
+\frame{\frametitle{Resources / References}
     \begin{center}
         \item Fin.
     \end{center}
