--- a/doc/ssh-talk.tex
+++ b/doc/ssh-talk.tex
@@ -20,7 +20,7 @@
 
 % -----------------------------------------------------------------------------------------
 
-\title{SSH Scan Case Study}
+\title{Server Compromise Case Study}
 \author{Stephen Wattam \& Rob Larson}
 \institute[2013]{Lancaster University}
 \date{\tiny \today}
@@ -36,7 +36,20 @@
 % -----------------------------------------------------------------------
 % Background
 % -----------------------------------------------------------------------
+
+
+
 \section{Background}
+
+\subsection{Introduction}
+
+\begin{itemize}
+	\item Overview of compromised test server
+	\item University network
+	\
+
+
+
 \subsection{Setup}
 \frame{\frametitle{About}
 \begin{itemize}
