--- a/doc/ssh-talk.tex
+++ b/doc/ssh-talk.tex
@@ -45,27 +45,29 @@
 \section{Background}
 
 \subsection{Introduction}
+\frame{\frametitle{Introduction}
 
 \begin{itemize}
 	\item Overview of compromised test server
 	\item University network
-	\
-
-
-
-\subsection{Setup}
-\frame{\frametitle{About}
-\begin{itemize}
-    \item Compromised machine was a controller for a test cluster
-    \item Set up on 17th November 2014
-    \item Notified of breach on 24th November
-
-        % 'what do we do now'
-
-
 \end{itemize}
 }
 
+\subsection{Overview}
+\frame{\frametitle{Overview of talk:}
+\begin{itemize}
+	\item Introduction
+	\item Evidence download
+	\item Breakdown of activities
+	\begin{itemize}
+			\item Log file
+			\item Analysis
+			\item Summary
+		\end{itemize}
+	\item Timeline of activities
+\end{itemize}
+
+}
 
 \subsection{Technical}
 \frame{\frametitle{The Network}
@@ -99,7 +101,13 @@
 \end{itemize}
 }
 
-
+\subsection{Situation}
+\frame{\frametitle{Situational Overview}
+\begin{itemize}
+	\item System install: 17th November
+	\item Notification of breach: 24th November
+\end{itemize}
+}
 
 
 % -----------------------------------------------------------------------
