Removed background curve.  Minor tweaks to bssh slides

--- a/doc/ssh-talk.tex
+++ b/doc/ssh-talk.tex
@@ -11,7 +11,7 @@
 % \usetheme[]{SmartSerif}
 % 
 
-\usetheme[]{SmartSerif}
+\usetheme[nocurve]{SmartSerif}
 
 
 % -----------------------------------------------------------------------------------------
@@ -137,7 +137,8 @@ File: \texttt{logs.tgz}
 File: \texttt{\_bssh.tgz}
 \begin{itemize}
 
-    \item Left over in ~daniel
+    \item Left over in \texttt{~daniel}
+    \item A quick google shows the docs, to be found in \texttt{hackforums/}
 
 \end{itemize}
 }
